--- a/index.html
+++ b/index.html
@@ -6,26 +6,62 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Kapakana:wght@300..400&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Kapakana:wght@300..400&family=Martel:wght@200;300;400;600;700;800;900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
 </head>
   
   
 <style>
+  
+  body {
+    background-image: linear-gradient(to bottom, white, #909EC7);
+  }
+  
+  .container {
+    max-width: 1200px;
+    height: 830px;
+    margin: auto;
+    position: relative; 
+    border: 2px solid black;
+  }
+  
+  .rei {
+    display: grid
+  }
+  
 
   h1 {
     font-family: 'Kapakana', sans-serif;
-    font-size: 40px;
-    margin: 0 0 10px 0;
+    font-size: 100px;
     color: black;
+    position: absolute;
+  }
+  
+  h2 {
+    font-family: 'Martel', sans-serif;
+    font-size: 75px;
+    color: black;
+    position: absolute;
   }
   
 </style>
 
   
 <body>
-  <h1>
-    hello my name is Lucas Lee
+  
+<div class="container">
+ <h1 style="left: 70%; top: 40%;">
+   Lucas Lee
   </h1>
+  
+  <h2 style="left: 58.5%; top: 50%;">
+    worldVIEW
+  </h2>
+  
     
+  </div>
 </body>
   
 </html>
