--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
       <h2 style="right: 5%; top: 40%;">
         worldVIEW
       </h2>
-
+    
+      <img src="eyes.png" style="position:absolute; width:1000px; right:300px">
+      <img src="reiayanami.png" style="position:absolute; width 500px; right: 300px">
 
     </div>
   </body>
