--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
   <style>
     
     html {
-      width: 1440px;
       margin: 0 auto;
       background-image: linear-gradient(to bottom, white, #909EC7)
     }
@@ -33,10 +32,10 @@
 
     .container {
       max-width: 1200px;
-      height: 1000px;
       margin: auto;
       position: relative;
       border: 2px solid black;
+      padding-bottom: 1000px;
     }
 
     h1 {
