--- a/splatoon.html
+++ b/splatoon.html
@@ -62,7 +62,7 @@
         color: #B3EBF2;
       }
 
-      .main-content {
+      .content {
         max-width: 1200px;
         margin: 50px auto;
         display: flex;
@@ -71,11 +71,11 @@
         gap: 20px;
       }
 
-      .para-left, .para-right {
+      .left-paragraph, .right-paragraph {
         width: 48%;
       }
       
-      .para-right {
+      .right-paragraph {
         padding-top: 550px;
       }
     </style>
@@ -90,13 +90,13 @@
       <li><a href="reality.html">realityVIEW</a></li>
     </ul>
 
-    <div class="main-content">
-      <p class="para-left">
+    <div class="content">
+      <p class="left-paragraph">
         Splatoon is my most played series, having the most hours in Splatoon 2 out of the three volumes. I started playing in 2018, quickly falling in love with the game and decided that I had to take it a little more seriously. I joined a team, played tournaments, and met amazing people.
         <br><br> The stories, the rivalries, the history, there is so much that goes into this silly game about painting that I appreciate and I am so grateful it allowed me to develop so many strong connections with people I can consider long term friends.
       </p>
 
-      <p class="para-right">
+      <p class="right-paragraph">
         After many breaks, I regularly play these days still striving for improvement and always open to playing with tons of people.
         <br><br>Splatoon truly is beautiful to me as I’ve been around for so long, I’ve seen so many people come and go, getting to witness how people reach the top. Everyone’s journey is different, but we all came to share our passion for the game.
       </p>
