--- a/index.html
+++ b/index.html
@@ -85,8 +85,11 @@
     ul li a:hover {
       color: #B3EBF2
     }
-
+      
     .bottombanner {
+      height: 550px;
+      width: 100%;
+      background-color: white;
       border-top: 10px double black;
       display: flex;
       justify-content: center;
@@ -139,8 +142,7 @@
       <img src="reiayanami.png" alt="Rei Ayanami on a swing" style="position:absolute; width:750px; top:39%; right:44.17%; opacity:0.5">
       <img src="reiayanami.png" alt="Low opacity effect to add to image of Rei" style="position:absolute; width:750px; top:39%; right:45.83%;">
 
-      <ul style="right: 15%; bottom: 2%">
-        <li><a href="index.html">home</a></li>
+      <ul style="right: 15%; bottom: 8%">
         <li><a href="splatoon.html">splatoonVIEW</a></li>
         <li><a href="mariokart.html">mariokartVIEW</a></li>
         <li><a href="reality.html">realityVIEW</a></li>
@@ -148,8 +150,9 @@
 
     </div>
 
+   
     <div class="bottombanner">
-      <img src="csmPanel.png" alt="Manga panel" style="height: 650px; width: 100%">
+      <img src="muse.png" alt="Manga panel" style="width: 100%">
     </div>
 
   </body>
