--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 
    
     <div class="bottombanner">
-      <img src="muse.png" alt="Manga panel" style="width: 100%">
+      <img src="muse.png" alt="Origin of Symmertry, album by Muse" style="width: 100%">
     </div>
 
   </body>
