--- a/mariokart.html
+++ b/mariokart.html
@@ -106,7 +106,7 @@
 
     <div class="header">
       <img src="mk8dlogo.png" alt="Splatoon Logo" style="width: 500px">
-      <h1>
+      <h1 style="font-weight:600">
         kinda sucks. but i love it
       </h1>
     </div>
