--- a/splatoon.html
+++ b/splatoon.html
@@ -107,8 +107,8 @@
     </ul>
 
     <div class="header">
-      <img src="splatoonlogo.png" alt="Splatoon Logo" style="width: 500px">
-      <h1>
+      <img src="splatoonlogo.png" alt="Splatoon Logo" style="width: 475px">
+      <h1 style="font-weight: 600">
         holds a special place in my heart
       </h1>
     </div>
