--- a/mariokart.html
+++ b/mariokart.html
@@ -18,6 +18,7 @@
       body {
         margin: 0 auto;
         font-family: 'Martel', sans-serif;
+        position: relative;
       }
 
       h1 {
@@ -130,8 +131,10 @@
         I have tons of experience with this game. Similar to Splatoon, I decided I wanted to start playing it competitively. I climbed the solo ranked ladder and hold the highest peak MMR (match making rating) in Canada along with competing at the highest level of play in the game’s main 6v6 league, Mario Kart Universal.<br><br>
         Mario Kart is probably the most stress inducing game I have ever played, and many others come to that same conclusion. Despite that, I’ve put so many hours into it because it was just that fun. I’ve coached other players before, along with going over my own games. It all comes from my true love for the game and passion to compete.
       </p>
+      
+      
     </div>
-
+     <img src="rrm.png" style="position: absolute; width: 400px; right: 0; bottom: 0">
   </body>
 
 </html>
