--- a/mariokart.html
+++ b/mariokart.html
@@ -131,8 +131,8 @@
 
     </div>
     <img src="rrm.png" alt="Rock Rock Mountain from Mario Kart 8 Deluxe" style="position: absolute; width:450px; right: 0; bottom: -4%">
-    <img src="items.png" alt="Star and Lightning Bolt from Mario Kart 8 Deluxe" style="position: absolute; width: 300px; right: -6%; top: 30%">
-    <img src="doublebox.png" alt="Double Item Box from Mario Kart 8 Deluxe" style="position: absolute; width: 300px; left: -7%; top: 50%">
+    <img src="items.png" alt="Star and Lightning Bolt from Mario Kart 8 Deluxe" style="position: absolute; width: 300px; right: 0; top: 30%">
+    <img src="doublebox.png" alt="Double Item Box from Mario Kart 8 Deluxe" style="position: absolute; width: 300px; left: 0; top: 50%">
   </body>
 
 </html>
