--- a/reality.html
+++ b/reality.html
@@ -1,1 +1,127 @@
-dadajisohfub
+<!DOCTYPE html>
+
+<html lang="en-CA">
+
+  <head>
+    <title>mariokartVIEW</title>
+    <meta charset="utf-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Kapakana:wght@300..400&family=Martel:wght@200;300;400;600;700;800;900&family=Schibsted+Grotesk:ital,wght@0,400..900;1,400..900&display=swap" rel="stylesheet">
+
+    <style>
+      html {
+        margin: 0 auto;
+        background-image: linear-gradient(to top, white 0%, white 30%, #E3F5F9 100%);
+      }
+
+      body {
+        margin: 0 auto;
+        font-family: 'Martel', sans-serif;
+        position: relative;
+      }
+
+      h1 {
+        font-family: 'Kapakana', sans-serif;
+        font-size: 75px;
+        font-weight: 340;
+        color: black;
+      }
+
+      .deco-text {
+        font-family: 'Kapakana', sans-serif;
+        font-size: 75px;
+        font-weight: 340;
+        color: black;
+        position: absolute;
+      }
+
+      p {
+        font-size: 20px;
+        font-weight: 400;
+        color: black;
+      }
+
+      ul {
+        font-size: 40px;
+        font-weight: 400;
+        color: black;
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+        display: flex;
+        justify-content: center;
+      }
+
+      ul li a {
+        display: block;
+        border-bottom: 10px double black;
+        color: black;
+        text-align: center;
+        padding: 30px 30px;
+        text-decoration: none;
+      }
+
+      a:visited {
+        text-decoration: none;
+      }
+
+      ul li a:hover {
+        color: #B3EBF2;
+      }
+
+      .header {
+        max-width: 1200px;
+        margin: 50px auto 30px;
+        display: flex;
+        align-items: center;
+        gap: 20px;
+      }
+
+      .content {
+        padding-top: 375px;
+        max-width: 1200px;
+        margin: 50px auto;
+        display: flex;
+        justify-content: center;
+        gap: 20px;
+        position: relative;
+      }
+
+      .content p {
+        width: 700px;
+      }
+    </style>
+
+  </head>
+
+  <body>
+    <ul>
+      <li><a href="index.html">home</a></li>
+      <li><a href="splatoon.html">splatoonVIEW</a></li>
+      <li><a href="mariokart.html">mariokartVIEW</a></li>
+      <li><a href="reality.html">realityVIEW</a></li>
+    </ul>
+
+    <div class="header">
+      <img src="mk8dlogo.png" alt="Splatoon Logo" style="width: 500px">
+      <h1 style="font-weight:600">
+        kinda sucks. but i love it
+      </h1>
+    </div>
+
+
+
+    <div class="content">
+      <p>
+        Yoshi on the Teddy Buggy RULED Mario Kart 8 Deluxe.<br><br>
+        A brief history lesson - Waluigi was the king of MK8D, until Nintendo updated the game and players quickly discovered that Yoshi on this god forsaken teddy bear is the best kart combo in the game.<br><br>
+        I have tons of experience with this game. Similar to Splatoon, I decided I wanted to start playing it competitively. I climbed the solo ranked ladder and hold the highest peak MMR (match making rating) in Canada. This is my <a href="https://lounge.mkcentral.com/mk8dx/PlayerDetails/19806?season=12">profile</a> during my prime season. Alongside that, I competed at the highest level of play in the game’s main 6v6 league, Mario Kart Universal.<br><br>
+        Mario Kart is probably the most stress inducing game I have ever played, and many others come to that same conclusion. Despite that, I’ve put so many hours into it because it was just that fun. I’ve coached other players before, along with going over my own games. It all comes from my true love for the game and passion to compete.
+      </p>
+
+
+    </div>
+  </body>
+
+</html>
