--- a/index.html
+++ b/index.html
@@ -151,7 +151,9 @@
     </div>
 
    
-    
+    <div class="bottombanner">
+      <img src="muse.png" alt="Origin of Symmertry, album by Muse" style="width: 100%">
+    </div>
 
   </body>
 
