--- a/reality.html
+++ b/reality.html
@@ -23,17 +23,9 @@
 
       h1 {
         font-family: 'Kapakana', sans-serif;
-        font-size: 75px;
+        font-size: 150px;
         font-weight: 340;
         color: black;
-      }
-
-      .deco-text {
-        font-family: 'Kapakana', sans-serif;
-        font-size: 75px;
-        font-weight: 340;
-        color: black;
-        position: absolute;
       }
 
       p {
@@ -72,16 +64,16 @@
 
       .header {
         max-width: 1200px;
-        margin: 50px auto 30px;
+        margin: 50px auto 0px;
         display: flex;
+        flex-direction: column;
         align-items: center;
-        gap: 20px;
+        gap: 10px;
       }
 
       .content {
-        padding-top: 375px;
         max-width: 1200px;
-        margin: 50px auto;
+        margin: auto;
         display: flex;
         justify-content: center;
         gap: 20px;
@@ -104,23 +96,24 @@
     </ul>
 
     <div class="header">
-      <img src="mk8dlogo.png" alt="Splatoon Logo" style="width: 500px">
-      <h1 style="font-weight:600">
-        kinda sucks. but i love it
+      <img src="myself.jpg" alt="Picture of Lucas Lee" style="width: 600px">
+      <h1>
+        Lucas Lee
       </h1>
     </div>
 
-
-
     <div class="content">
       <p>
-        Yoshi on the Teddy Buggy RULED Mario Kart 8 Deluxe.<br><br>
-        A brief history lesson - Waluigi was the king of MK8D, until Nintendo updated the game and players quickly discovered that Yoshi on this god forsaken teddy bear is the best kart combo in the game.<br><br>
-        I have tons of experience with this game. Similar to Splatoon, I decided I wanted to start playing it competitively. I climbed the solo ranked ladder and hold the highest peak MMR (match making rating) in Canada. This is my <a href="https://lounge.mkcentral.com/mk8dx/PlayerDetails/19806?season=12">profile</a> during my prime season. Alongside that, I competed at the highest level of play in the game’s main 6v6 league, Mario Kart Universal.<br><br>
-        Mario Kart is probably the most stress inducing game I have ever played, and many others come to that same conclusion. Despite that, I’ve put so many hours into it because it was just that fun. I’ve coached other players before, along with going over my own games. It all comes from my true love for the game and passion to compete.
+        I am studying Global Business and Digital Arts at the University of Waterloo, currently in my second year. I’m learning how to work in all sorts of media, like photography, graphic design, and programming. If you want to contact me, hit up my email or Instagram here.<br><br>
+        <a href="mailto:ls4lee@uwaterloo.ca">Send email</a> <br><br>
+        <a href="https://www.instagram.com/llucasllee/">Instagram</a> <br><br><br>
+        Regardless if it’s school or my games, I always yearn to improve. <br><br>
+        FOREVER LEARNING<br><br>
+        CHALLENGE THYSELF<br><br>
+        DO NOT FORGET YOUR WAY<br><br>
+        and remember what Kamina says...<br><br>
+        <img src="gurren.gif" alt="Kamina from Gurren Lagann" style="width: 700px">
       </p>
-
-
     </div>
   </body>
 
