--- a/reality.html
+++ b/reality.html
@@ -3,7 +3,7 @@
 <html lang="en-CA">
 
   <head>
-    <title>mariokartVIEW</title>
+    <title>realityVIEW</title>
     <meta charset="utf-8">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
